--- a/src/gqlgen.yml
+++ b/src/gqlgen.yml
@@ -1,6 +1,7 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - graph/*.graphqls
+  - graph/schema/*.graphql
+  - graph/schema/type/*.graphql
 
 # Where should the generated server code go?
 exec:
@@ -20,8 +21,9 @@ model:
 # Where should the resolver implementations go?
 resolver:
   layout: follow-schema
-  dir: graph
-  package: graph
+  dir: graph/resolver
+  package: resolver
+  filename_template: "{name}.resolvers.go"
 
 # Optional: turn on use ` + "`" + `gqlgen:"fieldName"` + "`" + ` tags in your models
 # struct_tag: json
@@ -41,7 +43,7 @@ resolver:
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
+autobind: []
 #  "main/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
